# Agentic-Analytics-Platform-Sample

./: .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/agents/: analytics_agent.py
backend/analytics/: engine.py
backend/api/: main.py
backend/data/: loader.py
backend/utils/: logger.py
data/samples/: hr_data.csv  sales.csv  web_traffic.csv
frontend/: Dockerfile.frontend  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatPanel.js  DataVisualizer.js  DatasetSelector.js
frontend/src/services/: api.js
scripts/: generate_samples.py
tests/: conftest.py  test_analytics_engine.py
