[project]
name = "agentic-analytics-platform"
version = "1.0.0"
description = "Agentic analytics platform powered by Ollama, FastAPI, and React"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "ollama==0.3.3",
  "pandas==2.2.3",
  "numpy==2.1.1",
  "scipy==1.14.1",
  "openpyxl==3.1.5",
  "pyarrow==17.0.0",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
